%% Smart Queue State Machine
%% Render at: https://mermaid.live

stateDiagram-v2
    [*] --> WAITING: Queue Created
    
    WAITING --> COMPLETE: 3/3 agents respond
    WAITING --> SOFT_DEGRADED: 2/3 agents + soft timeout (15s)
    WAITING --> HARD_DEGRADED: 1/3 agents + hard timeout (30s)
    WAITING --> FAILED: 0/3 agents + hard timeout (30s)
    
    COMPLETE --> [*]: Return results
    SOFT_DEGRADED --> [*]: Return partial results
    HARD_DEGRADED --> [*]: Return minimal results
    FAILED --> [*]: Raise NoResultsError
    
    note right of WAITING
        Collecting agent results
        Threading.Condition for sync
    end note
    
    note right of COMPLETE
        ✅ Ideal: All 3 agents
        Quality: 100%
        Latency: min(agent_times)
    end note
    
    note right of SOFT_DEGRADED
        ⚠️ Acceptable: 2/3 agents
        Quality: 95%
        Latency: 15s max
    end note
    
    note right of HARD_DEGRADED
        🔶 Degraded: 1/3 agents
        Quality: 90%
        Latency: 30s max
    end note
    
    note right of FAILED
        ❌ Failure: 0/3 agents
        Quality: 0%
        Error raised
    end note

